--- a/src/index.css
+++ b/src/index.css
@@ -4,18 +4,15 @@
 
 header {
   background-color: #0000ff;
+  color: #ffffff;
   padding: 20px;
 }
 
-.card-container {
+.card {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   margin-top: 20px;
-}
-
-.card {
-  margin: 10px;
   width: 200px;
   border: 1px solid #ccc;
   padding: 10px;
