--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,15 @@ header {
   padding: 20px;
 }
 
-.card {
+main {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   margin-top: 20px;
+  gap: 40px;
+}
+
+.card {
   width: 200px;
   border: 1px solid #ccc;
   padding: 10px;
